# LoRaWAN-Backend

./: CMakeLists.txt  Doxyfile.in  LICENSE  example.com.zone  lorawan.service  named.conf  readme.md  startServer.sh  structure.sql
app_server/: as.h  base64.c  child.c  conf.json  main.c  web.c
join_server/: conf.json  js.h  main.c  web.c  web.h
libbackend/: aes.c  libserver.c  libserver.h  lorawan.h  resolve.c
network_server/: adr.c  arib_16ch_gw_conf.json  arib_8ch_gw_conf.json  au915_hybrid.json  band_arib8ch.c  band_au915.c  band_cn779.c  band_eu433.c  band_eu868.c  band_us902.c  child.c  cn779.json  common.c  conf.json  eu433.json  eu868.json  fNS.c  fNS.h  gateway.c  gw_server.h  hNS.c  loragw_hal.h  ns.h  sNS.c  sNS.h  us902_hybridB_gw_conf.json  us902_hybridC_gw_conf.json  us902_hybridD_gw_conf.json  us902_hybridE_gw_conf.json  us902_hybridF_gw_conf.json  us902_hybridG_gw_conf.json  us902_hybridH_gw_conf.json  us902_hybrid_gw_conf.json  web.c
resolve/: main.c
